data_archive/test_log_2.txt
============================= test session starts =============================
platform win32 -- Python 3.13.2, pytest-9.0.1, pluggy-1.5.0 -- C:\ProgramData\miniconda3\python.exe
cachedir: .pytest_cache
rootdir: C:\Users\Pichau\Repos\MenirVital\Menir
configfile: pytest.ini
plugins: anyio-4.12.0, mock-3.15.1
collecting ... collected 0 items / 1 error

=================================== ERRORS ====================================
_________________ ERROR collecting tests/test_runner_logic.py _________________
..\..\..\AppData\Roaming\Python\Python313\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
..\..\..\AppData\Roaming\Python\Python313\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\ProgramData\miniconda3\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
..\..\..\AppData\Roaming\Python\Python313\site-packages\_pytest\assertion\rewrite.py:197: in exec_module
    exec(co, module.__dict__)
tests\test_runner_logic.py:4: in <module>
    from src.v3.menir_runner import MenirRunner
E     File "C:\Users\Pichau\Repos\MenirVital\Menir\src\v3\menir_runner.py", line 180
E       def ingest_payload(self, payload, project, doc_hash=None):
E   SyntaxError: expected 'except' or 'finally' block
=========================== short test summary info ===========================
ERROR tests/test_runner_logic.py
============================== 1 error in 0.13s ===============================
